AS-2004-03-25-1: Bugfix:    openSSL vulnerabilites
                            upgrade to openSSL 0.9.7d
                 Bugtraq:   5018884

AS-2004-03-25-0: Enhancem.: add SGE_BINARY_PATH variable to job environment
                 Changed:   sge_execd, submit.1
                 Issue:     919
                 Bugtraq:   5018757
                 Review:    DT
             
MD-2004-03-22-0: Bugfix:    qalter lacks -dl option
                            qstat crashes with qstat -u ""
                 Changed:   qstat, qalter, parse.c
                 Issue:     599, 600
                 Bugtraq:   5018726, 5018733
                 Review:    AA

JG-2004-03-17-0: Bugfix:    fixed race condition in sge_shepherd (qlogin_starter
                            for qlogin/qrsh jobs).
                 Changed:   sge_shepherd
                 Issue:     871
                 Bugtraq:   5018669
                 Review:    CR

EB-2004-03-16-0: Bugfix:    mail bomb upon abort with tightly int. par. job
                 Issue:     637
                 Bugtraq:   5020153
                 Changed:   sge_execd
                 Review:    JG

SG-2004-03-12-2: Bugfix:    execd died, when a load sensor was restarted.
                 Issue:     835
                 bugtraq:   5019497
                 Changed:   execd
                 Review:    AS

SG-2004-03-10-0: Bugfix:    scheduler crashed during functional ticket 
                            computation on linux AMD64 
                 Changed:   scheduler
                 Review:    CR
                 Issue:     820
                 bugtraq:   5019584

RC-2004-03-06-1: Bugfix:    nice values should not be less than zero on Linux,
                            merging the fix from maintrunk to 5.3
                 Changed:   execd

RC-2004-03-06-0: Bugfix:    deny jobnames with a colon
                 Issue:     314
                 Bugtraq:   5020278
                 Review:    RC, BC (patch from BC)